"alterar senha" finalizada

--- a/alterar-senha.html
+++ b/alterar-senha.html
@@ -49,12 +49,12 @@
                             <h5 class="border-bottom pb-3">Alterar Senha</h5>
                             <div class="d-grid gap-2 border-bottom pb-4">
                                 <p>Use o formulário a seguir para alterar a senha</p>
-                                <label for="formGroupExampleInput2" class="form-label fw-bold">Senha atual:</label>
-                                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Digite sua senha atual">
-                                <label for="formGroupExampleInput2" class="form-label fw-bold">Nova senha:</label>
-                                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Digite sua nova senha">
-                                <label for="formGroupExampleInput2" class="form-label fw-bold">Repita a nova senha:</label>
-                                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Reinsira sua nova senha">
+                                <label for="formGroupExampleInput2" class="form-label fw-semibold ">Senha atual:</label>
+                                <input type="text" class="form-control mb-4" id="formGroupExampleInput2" placeholder="Digite sua senha atual">
+                                <label for="formGroupExampleInput2" class="form-label fw-semibold ">Nova senha:</label>
+                                <input type="text" class="form-control mb-4" id="formGroupExampleInput2" placeholder="Digite sua nova senha">
+                                <label for="formGroupExampleInput2" class="form-label fw-semibold ">Repita a nova senha:</label>
+                                <input type="text" class="form-control mb-2" id="formGroupExampleInput2" placeholder="Reinsira sua nova senha">
                             </div>
                             <button type="button" class="btn btn-primary w-50 text-xs ">Salvar alterações</button>
                         </div>
