--- a/modalidade-cadastrar.html
+++ b/modalidade-cadastrar.html
@@ -1,80 +1,123 @@
-<!doctype html>
 <html lang="pt-br" class="h-100">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Dashboard</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/style.css">
-    </head>
-    <body class="h-100">
-        <div class="container-fluid h-100">
-            <div class="row h-100">
-                <div class="left col-2 p-4 border-end h-100 d-flex flex-column justify-content-between">
-                    <div class="head-menu px-3 pt-3 gap-5 d-flex flex-column">
-                        <div class="icons d-flex justify-content-between">
-                            <img src="assets/img/Group.svg" alt="">
-                            <img src="assets/img/barras-menu.svg" alt="">
-                        </div>
-                        <div class="container-opitions gap-4 d-flex flex-column">
-                            <div class="options p-2 d-flex gap-2 align-items-center">
-                                <img src="assets/img/icon_home.svg" alt="">
-                                <p class="mb-0">Dashboard</p>
-                            </div>
-                            <div class="options p-2 d-flex gap-2 align-items-center pb-4 border-bottom">
-                                <img src="assets/img/icon_star.svg" alt="">
-                                <p class="mb-0">Modalidades</p>
-                            </div>
-                            <div class="options p-2 d-flex gap-2 align-items-center">
-                                <img src="assets/img/icon_exit.svg" alt="">
-                                <p class="mb-0 text-danger">Sair</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="perfil px-3 pb-3 d-flex gap-2">
-                        <img src="assets/img/icon_user_circle.svg" alt="">
-                        <div class="text">
-                            <p class="mb-0 fw-bold nome_perfil">Jr Programador</p>
-                            <p class="mb-0 status_perfil">Atleta</p>
-                        </div>
-                    </div>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Dashboard</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
+<body class="h-100">
+  <div class="container-fluid">
+    <div class="row h-100">
+      <div class="left col-2 p-4 border-end h-100 d-flex flex-column justify-content-between">
+        <div class="head-menu px-3 pt-3 gap-5 d-flex flex-column">
+          <div class="icons d-flex justify-content-between">
+            <img src="assets/img/Group.svg" alt="">
+            <img src="assets/img/barras-menu.svg" alt="">
+          </div>
+          <div class="container-opitions gap-4 d-flex flex-column">
+            <div class="options p-2 d-flex gap-2 align-items-center">
+              <img src="assets/img/icon_home.svg" alt="">
+              <p class="mb-0">Dashboard</p>
+            </div>
+            <div class="options p-2 d-flex gap-2 align-items-center pb-4 border-bottom">
+              <img src="assets/img/icon_star.svg" alt="">
+              <p class="mb-0">Modalidades</p>
+            </div>
+            <div class="options p-2 d-flex gap-2 align-items-center">
+              <img src="assets/img/icon_exit.svg" alt="">
+              <p class="mb-0 text-danger">Sair</p>
+            </div>
+          </div>
+        </div>
+        <div class="perfil px-3 pb-3 d-flex gap-2">
+          <img src="assets/img/icon_user_circle.svg" alt="">
+          <div class="text">
+            <p class="mb-0 fw-bold nome_perfil">Jr Programador</p>
+            <p class="mb-0 status_perfil">Atleta</p>
+          </div>
+        </div>
+      </div>
+      <div class="right col-md-auto w-75">
+        <div class="exibicao d-flex flex-column gap-3 ms-5 ps-5 mt-5">
+          <div class="">
+            <p> Perfil </p>
+            <h5 class="fw-bold"> Perfil do Atleta</h5>
+          </div>
+          <span class="border-top w-100"></span>
+          <div class="d-flex justify-content-start">
+            <span class="border-bottom"></span>
+            <div class="container-cards d-flex flex-column align-content-center flex-wrap gap-4 me-4">
+              <div class="card p-3 d-flex flex-column gap-4 w-75">
+                <div class="top d-flex justify-content-center">
+                  <img src="assets/img/perfil.png" alt="">
                 </div>
-                <div class="exibicao d-flex flex-column gap-3 ms-5 ps-5 mt-5">
-                    <p> modalidade <img src="assets/img/Vector.png" alt=""> Cadastro</p>
-                    <h5 class="fw-bold"> Perfil do Atleta</h5>
-                    <div class="container-cards d-flex flex-column gap-4">
-                      <div class="card p-3 d-flex flex-column gap-4">
-                        <div class="top d-flex align-items-center justify-content-between gap-3">
-                        </div>
-                        <h1 class="card-title"> Cadastramento de Modalidade</h1>
-                        <span class="border-bottom"></span>
-                      </div>
-                      <form>
-                        <fieldset disabled>
-                          <div class="mb-3">
-                            <label for="disabledTextInput" class="form-label">Nome</label>
-                            <input type="text" id="disabledTextInput" class="form-control" placeholder="Digite o nome da modalidade">
-                            <div class="form-check">
-                                <label for="disabledTextInput" class="form-label">Tipo</label>
-                                <input class="form-check-input" type="radio" name="flexRadioDisabled" id="flexRadioDisabled" disabled>
-                                <label class="form-check-label" for="flexRadioDisabled">
-                                  Coletiva
-                                </label>
-                              </div>
-                              <div class="form-check">
-                                <input class="form-check-input" type="radio" name="flexRadioDisabled" id="flexRadioCheckedDisabled" checked disabled>
-                                <label class="form-check-label" for="flexRadioCheckedDisabled">
-                                  Individual
-                                </label>
-                                <select class="form-select" aria-label="Default select example">
-                                    <label for="disabledTextInput" class="form-label">Ìcone da modalidade></label>
-                                    <option selected> Selecione <img src="assets/img/seta.png" alt=""></option>
-                                </select>
-                              </div>
-                          </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    </body>
+                <h5 class="card-title text-center"> Jr Programador da Silva</h1>
+              </div>
+              <button type="button" class="btn btn-primary btn-sm fw-bold"><img src="assets/img/lapis.png" alt="">
+                Editar
+                perfil</button>
+              <button type="button" class="btn btn-primary btn-sm bg-transparent text-primary fw-bold border-0"><img
+                  src="assets/img/cadeado.png" class="mr-4" alt="">Alterar
+                senha</button>
+              <button type="button" class="btn btn-primary btn-sm bg-transparent border-0"><img
+                  src="assets/img/lixo.png" alt=""></button>
+            </div>
+
+            <div class="d-flex flex-column gap-4 w-50 h-25">
+              <table class="table border table-borderless rounded">
+                <tbody>
+                  <tr class="border-bottom">
+                    <th scope="row">CPF</th>
+                    <td>123.456.789-10</td>
+                  </tr>
+                  <tr class="border-bottom">
+                    <th scope="row">E-mail</th>
+                    <td>jrprogramador@gmail.com</td>
+                  </tr>
+                  <tr class="border-bottom">
+                    <th scope="row">Nascimento</th>
+                    <td>11/09/2003</td>
+                  </tr>
+                  <tr class="border-bottom">
+                    <th scope="row">Gênero</th>
+                    <td>Masculino</td>
+                  </tr>
+                  <tr class="border-bottom">
+                    <th scope="row">UF</th>
+                    <td>Rio Grande do Norte(RN)</td>
+                  </tr>
+                  <tr class="border-bottom">
+                    <th scope="row">Cidade</th>
+                    <td>Natal</td>
+                  </tr>
+                </tbody>
+              </table>
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
