fazendo upload das últimas alterações

--- a/modalidade-cadastrar.html
+++ b/modalidade-cadastrar.html
@@ -1,5 +1,4 @@
 <html lang="pt-br" class="h-100">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,8 +28,8 @@
               <p class="mb-0">Dashboard</p>
             </div>
             <div class="options p-2 d-flex gap-2 align-items-center pb-4 border-bottom">
-              <img src="assets/img/icon_star.svg" alt="">
-              <p class="mb-0">Modalidades</p>
+              <img src="assets/img/icon_exit.svg" alt="">
+             <img src="assets/img/menu-item.png" alt="">
             </div>
             <div class="options p-2 d-flex gap-2 align-items-center">
               <img src="assets/img/icon_exit.svg" alt="">
@@ -46,7 +45,35 @@
           </div>
         </div>
       </div>
-     
+      <div class="right col-md-auto w-75">
+        <div class="exibicao d-flex flex-column gap-3 ms-5 ps-5 mt-5">
+          <div class="">
+           <img src="assets/img/Modalidades.png" alt="">
+            <img src="" alt=""> #por aqui a ft da seta
+            <h5 class="fw-bold">Cadastro</h5>
+          </div>
+          <span class="border-top w-100"></span>
+          <form>
+            <fieldset disabled>
+              <legend>Digite o nome da modalidade</legend>
+            </fieldset>
+            <div class="mb-3">
+              <label for="disabledTextInput" class="form-label">Nome</label>
+              <input type="text" id="disabledTextInput" class="form-control" placeholder="Disabled input">
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                <label class="form-check-label" for="flexRadioDefault2">
+                 Individual
+                </label>
+              </div>
+              <input type="text" id="disabledTextInput" class="form-control" placeholder="Disabled input">
+            </div>
+            <label for="disabledTextInput" class="form-label">Ícone da modalidade</label>
+            <select class="form-select" aria-label="Default select example">
+                <option selected>Selecione</option>
+            </select>
+          </form>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
