subindo a tela inicial modalidades

--- a/detalhamento_modalidade.html
+++ b/detalhamento_modalidade.html
@@ -170,7 +170,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="dados-atletas opacity-75 p-3 border-bottom d-flex justify-content-between align-items-center ">
+                            <div class="dados-atletas pacity-75 p-3 border-bottom d-flex justify-content-between align-items-center ">
                                 <div class="left d-flex">
                                     <img src="assets/img/Ellipse 4.svg" alt="">
                                     <div class="text ms-2">
